fixing general routing each services
